--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             </div>
             <div class="col-lg-6">
                 <h2 class="display-6 fw-bold text-body-emphasis lh-1 mb-4">Salesforce Certification Training Program</h2>
-                <h5 class="mb-3">Become a Salesforce Administrator by working on real-time projects and case studies through this Salesforce Course in just 1.5 months!</h5>
+                <h5 class="mb-3 roboto-thin-italic">Become a Salesforce Administrator by working on real-time projects and case studies through this Salesforce Course in just 1.5 months!</h5>
                 <p class="lead">We are dedicated to empowering individuals and businesses through comprehensive Salesforce education. As a leading EdTech company specializing in Salesforce, we offer a range of plans and courses designed to transform your Salesforce journey.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Enroll Now</button>
+                    <button type="button" class="btn btn-outline-secondary btn-lg px-4 me-md-2">Download Brochure</button>
                 </div>
             </div>
         </div>
@@ -58,7 +59,7 @@
         <h3 class="pb-1">Key <span class="fw-bold">Highlights</span></h3>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-pip text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-pip text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h13A1.5 1.5 0 0 1 16 3.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5zM1.5 3a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5z"/>
                     <path d="M8 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 .5.5v3a.5.5 0 0 1-.5.5h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg>
@@ -67,7 +68,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-person-circle text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-person-circle text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                     <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                 </svg>
@@ -76,7 +77,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-rocket-takeoff text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-rocket-takeoff text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path d="M9.752 6.193c.599.6 1.73.437 2.528-.362s.96-1.932.362-2.531c-.599-.6-1.73-.438-2.528.361-.798.8-.96 1.933-.362 2.532"/>
                     <path d="M15.811 3.312c-.363 1.534-1.334 3.626-3.64 6.218l-.24 2.408a2.56 2.56 0 0 1-.732 1.526L8.817 15.85a.51.51 0 0 1-.867-.434l.27-1.899c.04-.28-.013-.593-.131-.956a9 9 0 0 0-.249-.657l-.082-.202c-.815-.197-1.578-.662-2.191-1.277-.614-.615-1.079-1.379-1.275-2.195l-.203-.083a10 10 0 0 0-.655-.248c-.363-.119-.675-.172-.955-.132l-1.896.27A.51.51 0 0 1 .15 7.17l2.382-2.386c.41-.41.947-.67 1.524-.734h.006l2.4-.238C9.005 1.55 11.087.582 12.623.208c.89-.217 1.59-.232 2.08-.188.244.023.435.06.57.093q.1.026.16.045c.184.06.279.13.351.295l.029.073a3.5 3.5 0 0 1 .157.721c.055.485.051 1.178-.159 2.065m-4.828 7.475.04-.04-.107 1.081a1.54 1.54 0 0 1-.44.913l-1.298 1.3.054-.38c.072-.506-.034-.993-.172-1.418a9 9 0 0 0-.164-.45c.738-.065 1.462-.38 2.087-1.006M5.205 5c-.625.626-.94 1.351-1.004 2.09a9 9 0 0 0-.45-.164c-.424-.138-.91-.244-1.416-.172l-.38.054 1.3-1.3c.245-.246.566-.401.91-.44l1.08-.107zm9.406-3.961c-.38-.034-.967-.027-1.746.163-1.558.38-3.917 1.496-6.937 4.521-.62.62-.799 1.34-.687 2.051.107.676.483 1.362 1.048 1.928.564.565 1.25.941 1.924 1.049.71.112 1.429-.067 2.048-.688 3.079-3.083 4.192-5.444 4.556-6.987.183-.771.18-1.345.138-1.713a3 3 0 0 0-.045-.283 3 3 0 0 0-.3-.041Z"/>
                     <path d="M7.009 12.139a7.6 7.6 0 0 1-1.804-1.352A7.6 7.6 0 0 1 3.794 8.86c-1.102.992-1.965 5.054-1.839 5.18.125.126 3.936-.896 5.054-1.902Z"/>
@@ -86,7 +87,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-award text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-award text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path d="M9.669.864 8 0 6.331.864l-1.858.282-.842 1.68-1.337 1.32L2.6 6l-.306 1.854 1.337 1.32.842 1.68 1.858.282L8 12l1.669-.864 1.858-.282.842-1.68 1.337-1.32L13.4 6l.306-1.854-1.337-1.32-.842-1.68zm1.196 1.193.684 1.365 1.086 1.072L12.387 6l.248 1.506-1.086 1.072-.684 1.365-1.51.229L8 10.874l-1.355-.702-1.51-.229-.684-1.365-1.086-1.072L3.614 6l-.25-1.506 1.087-1.072.684-1.365 1.51-.229L8 1.126l1.356.702z"/>
                     <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1z"/>
                 </svg>
@@ -95,7 +96,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg class="bi bi-briefcase text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
+                <svg class="bi bi-briefcase text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em" xmlns="http://www.w3.org/2000/svg" fill="rgb(0, 169, 244)" viewBox="0 0 16 16">
                     <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v1.384l7.614 2.03a1.5 1.5 0 0 0 .772 0L16 5.884V4.5A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5"/>
                     <path d="M0 12.5A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5V6.85L8.129 8.947a.5.5 0 0 1-.258 0L0 6.85z"/>
                 </svg>
@@ -104,7 +105,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-alarm text-body-secondary flex-shrink-0 me-3 " viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-alarm text-body-secondary flex-shrink-0 me-3 " viewBox="0 0 16 16">
                     <path d="M8.5 5.5a.5.5 0 0 0-1 0v3.362l-1.429 2.38a.5.5 0 1 0 .858.515l1.5-2.5A.5.5 0 0 0 8.5 9z"/>
                     <path d="M6.5 0a.5.5 0 0 0 0 1H7v1.07a7.001 7.001 0 0 0-3.273 12.474l-.602.602a.5.5 0 0 0 .707.708l.746-.746A6.97 6.97 0 0 0 8 16a6.97 6.97 0 0 0 3.422-.892l.746.746a.5.5 0 0 0 .707-.708l-.601-.602A7.001 7.001 0 0 0 9 2.07V1h.5a.5.5 0 0 0 0-1zm1.038 3.018a6 6 0 0 1 .924 0 6 6 0 1 1-.924 0M0 3.5c0 .753.333 1.429.86 1.887A8.04 8.04 0 0 1 4.387 1.86 2.5 2.5 0 0 0 0 3.5M13.5 1c-.753 0-1.429.333-1.887.86a8.04 8.04 0 0 1 3.527 3.527A2.5 2.5 0 0 0 13.5 1"/>
                 </svg>
@@ -113,7 +114,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="currentColor" class="bi bi-infinity text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.75em" height="1.75em" fill="rgb(0, 169, 244)" class="bi bi-infinity text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path d="M5.68 5.792 7.345 7.75 5.681 9.708a2.75 2.75 0 1 1 0-3.916ZM8 6.978 6.416 5.113l-.014-.015a3.75 3.75 0 1 0 0 5.304l.014-.015L8 8.522l1.584 1.865.014.015a3.75 3.75 0 1 0 0-5.304l-.014.015zm.656.772 1.663-1.958a2.75 2.75 0 1 1 0 3.916z"/>
                 </svg>
                 <div>
@@ -121,7 +122,7 @@
                 </div>
             </div>
             <div class="col d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="1.35em" height="1.35em" fill="currentColor" class="bi bi-telephone-outbound-fill text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="1.35em" height="1.35em" fill="rgb(0, 169, 244)" class="bi bi-telephone-outbound-fill text-body-secondary flex-shrink-0 me-3" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877zM11 .5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V1.707l-4.146 4.147a.5.5 0 0 1-.708-.708L14.293 1H11.5a.5.5 0 0 1-.5-.5"/>
                 </svg>
                 <div>
@@ -134,7 +135,7 @@
     <div class="container my-5">
         <div class="row pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-                <h2 class="display-4 fw-bold lh-1 text-body-emphasis mb-5">Who can go for this Salesforce Course?</h2>
+                <h2 class="display-4 fw-bold lh-1 text-body-emphasis mb-5"><span class="fw-light text">Who can go for this</span> Salesforce Course?</h2>
                 <ul class="m-0">
                     <li class="li">Salesforce professionals, software administrators, app builders.</li>
                     <li class="li">Developers, analysts, IT managers.</li>
@@ -149,6 +150,46 @@
         </div>
     </div>
 
+    <div class="container px-4 py-5" id="hanging-icons">
+        <h2 class="pb-2">Salesforce Projects</h2>
+        <div class="row py-5 row-cols-1 row-cols-lg-4">
+            <div class="col d-flex align-items-start hangicon2">
+                <div>
+                    <h5 class="fs-5 pe-2 ps-3 pt-4 text-body-emphasis">Real-Time Inventory Management with Salesforce</h5>
+                    <p class="pe-2 ps-3">In this project, you will keep track of the
+                        inventory and product purchases in real-
+                        time to keep products well-stocked. Key
+                        points in the project are tracking customer
+                        information, updating inventory, and
+                        keeping track of sold products.</p>
+
+                </div>
+            </div>
+            <div class="col d-flex align-items-start hangicon2">
+                <div>
+                    <h5 class="fs-5 pe-2 ps-3 pt-4 text-body-emphasis">Creating a Library Management System with Salesforce</h5>
+                    <p class="pe-2 ps-3">
+                        This project involves tracking books to meet
+                        needs and make timely returns. The project
+                        revolves around creating a Salesforce Apex
+                        platform, customizing Salesforce, and
+                        analyzing data for Salesforce library
+                        management with reports.</p>
+                </div>
+            </div>
+            <div class="col d-flex align-items-start hangicon2">
+                <div>
+                    <h5 class="fs-5 pe-2 ps-3 pt-4 text-body-emphasis">Understanding Salesforce Administrator and Developer Concepts</h5>
+                    <p class="pe-2 ps-3">The project will familiarize you with aspects
+                        of Salesforce and introduce you to cloud
+                        computing scenarios. You will also get to
+                        work on extending access with permission
+                        sets, bulk reporting of data with the data
+                        loader, and importing data.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <footer class="py-5">
@@ -200,7 +241,7 @@
         </div>
 
         <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 p-lg-4 border-top">
-            <p>© Copyright 2011 - 2024 ilearningscareer.</p>
+            <p>© Copyright 2011 - 2024 ilearnings career & consulting pvt ltd.</p>
             <ul class="list-unstyled d-flex">
                 <li class="ms-3"><a class="link-body-emphasis" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
                     <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
