--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
         </div>
     </div>
 
+    <div class="ocean">
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
     <footer class="py-5">
         <div class="row">
             <div class="col-6 col-md-2 mb-3">
