--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <div class="container px-3 py-4 keyFeature" id="icon-grid">
+    <div class="container px-3 py-4 keyFeature skill" id="icon-grid">
         <h3 class="pb-1">Key <span class="fw-bold">Highlights</span></h3>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
             <div class="col d-flex align-items-center">
