--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <main>
+    <!--    navbar-->
     <header class="p-3 text-g-dark text-dark">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center">
@@ -40,6 +41,7 @@
         </div>
     </header>
 
+    <!--hero -->
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
@@ -63,6 +65,7 @@
         </div>
     </div>
 
+    <!--    key features-->
     <div class="container px-3 py-4 keyFeature skill" id="icon-grid">
         <h3 class="pb-1">Key <span class="fw-bold">Highlights</span></h3>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
@@ -159,6 +162,112 @@
         </div>
     </div>
 
+    <!--    navigator-->
+    <div class="p-3 pb-0 text-g-dark text-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-center">
+                <a class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none" href="/">
+                </a>
+
+
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                    <li><a class="nav-link px-1 roboto-regular text-dark" href="#">Overview</a></li>
+                    <li><a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#">Fees</a></li>
+                    <li><a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#">Curriculums</a></li>
+                    <li><a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#">Certification</a></li>
+                    <li><a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#">Reviews</a></li>
+                    <li><a class="nav-link mx-1 px-1 roboto-regular text-dark" href="#">FAQs</a></li>
+                </ul>
+                <div class="text-end">
+                    <button class="btn btn-outline-primary p-1 m-0" type="button">Enroll Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container px-4 py-5 overview">
+        <div class="overview-Right"><h1 class="mb-4">Salesforce Certification Training Course <span
+                class="text">Overview</span></h1>
+            <p>iLearnings offers both live instructor-led classroom training and self-paced online training for you to
+                become a Salesforce administrator or consultant. You will be fully trained in handling the Salesforce
+                instance, platform, database, application design, platform configuration, automation processes, project
+                management, application development using Lightning, and more in this Salesforce Training Program
+                Course.</p>
+
+            <div class="d-flex flex-column flex-md-row gap-4 py-md-5 flex-wrap align-items-center justify-content-center">
+                <ul class="dropdown position-static d-grid gap-2 p-2 px-0 rounded-0 mx-0 shadow w-100"
+                    data-bs-theme="light">
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">Why are
+                        Salesforce
+                        Certifications
+                        important?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What are the
+                        prerequisites for taking this
+                        Salesforce Certification Course?
+                    </a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium"> What will
+                        you learn in this Salesforce
+                        Training
+                        Online?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium" href="#">Why
+                        should you take the Salesforce
+                        Certifications?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium" href="#">How
+                        to get certified in
+                        Salesforce?</a>
+                        <svg class="bi bi-chevron-down me-3 svg-pointer" fill="currentColor" height="16"
+                             viewBox="0 0 16 16"
+                             width="16" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
+                                  fill-rule="evenodd"/>
+                        </svg>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="overview-left"></div>
+    </div>
+    <!--who can enroll in course-->
     <div class="container my-5">
         <div class="row pb-0 pe-lg-0 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
@@ -179,6 +288,7 @@
         </div>
     </div>
 
+    <!--    skills section-->
     <div class="container px-4 py-5 skill">
         <h2 class="pb-1">Skills <span class="text">Covered</span></h2>
 
@@ -236,6 +346,7 @@
         </div>
     </div>
 
+    <!--    project-->
     <div class="container px-4 py-5" id="hanging-icons">
         <h2 class="pb-2">Salesforce <span class="text">Projects</span></h2>
         <div class="projects">
@@ -303,10 +414,8 @@
         </div>
     </div>
 
-    <div class="ocean">
-        <div class="wave"></div>
-        <div class="wave"></div>
-    </div>
+
+    <!--footer-->
     <footer class="py-5">
         <div class="row">
             <div class="col-6 col-md-2 mb-3">
@@ -394,6 +503,7 @@
             </ul>
         </div>
     </footer>
+
 </main>
 <script crossorigin="anonymous"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
