--- a/index.html
+++ b/index.html
@@ -211,6 +211,18 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">Salesforce Certifications aren’t just ordinary certifications. They
+                            are
+                            recognized in the
+                            industry and verify that the person is skilled in a specific Salesforce field. There are
+                            many Salesforce Certifications available in various fields, for people who wish to be
+                            skilled in those areas or want to start a career in that field. Salesforce Certifications
+                            are available for IT as well as non-IT professionals.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium">What are the
                         prerequisites for taking this
                         Salesforce Certification Course?
@@ -224,6 +236,18 @@
                     </li>
                     <li>
                         <hr class="dropdown-divider">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">Salesforce Certifications aren’t just ordinary certifications. They
+                            are
+                            recognized in the
+                            industry and verify that the person is skilled in a specific Salesforce field. There are
+                            many Salesforce Certifications available in various fields, for people who wish to be
+                            skilled in those areas or want to start a career in that field. Salesforce Certifications
+                            are available for IT as well as non-IT professionals.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
                     </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium"> What will
                         you learn in this Salesforce
@@ -239,6 +263,18 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">Salesforce Certifications aren’t just ordinary certifications. They
+                            are
+                            recognized in the
+                            industry and verify that the person is skilled in a specific Salesforce field. There are
+                            many Salesforce Certifications available in various fields, for people who wish to be
+                            skilled in those areas or want to start a career in that field. Salesforce Certifications
+                            are available for IT as well as non-IT professionals.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium" href="#">Why
                         should you take the Salesforce
                         Certifications?</a>
@@ -252,6 +288,18 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p">Salesforce Certifications aren’t just ordinary certifications. They
+                            are
+                            recognized in the
+                            industry and verify that the person is skilled in a specific Salesforce field. There are
+                            many Salesforce Certifications available in various fields, for people who wish to be
+                            skilled in those areas or want to start a career in that field. Salesforce Certifications
+                            are available for IT as well as non-IT professionals.</p>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
                     <li class="d-flex align-items-center"><a class="dropdown-item rounded-0 p-2 fw-medium" href="#">How
                         to get certified in
                         Salesforce?</a>
@@ -261,6 +309,18 @@
                             <path d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708"
                                   fill-rule="evenodd"/>
                         </svg>
+                    </li>
+                    <li>
+                        <hr class="dropdown-divider drop-info">
+                    </li>
+                    <li class="drop-info p-2">
+                        <p class="dropdown-p p-0">Salesforce Certifications aren’t just ordinary certifications. They
+                            are
+                            recognized in the
+                            industry and verify that the person is skilled in a specific Salesforce field. There are
+                            many Salesforce Certifications available in various fields, for people who wish to be
+                            skilled in those areas or want to start a career in that field. Salesforce Certifications
+                            are available for IT as well as non-IT professionals.</p>
                     </li>
                 </ul>
             </div>
